internal/fourslash/tests/gen/derivedTypeIndexerWithGenericConstraints_test.go
// Code generated by convertFourslash; DO NOT EDIT.
// To modify this test, run "npm run makemanual derivedTypeIndexerWithGenericConstraints"

package fourslash_test

import (
	"testing"

	"github.com/apyrr/tlua/internal/fourslash"
	"github.com/apyrr/tlua/internal/testutil"
)

func TestDerivedTypeIndexerWithGenericConstraints(t *testing.T) {
	fourslash.SkipIfFailing(t)
	t.Parallel()
	defer testutil.RecoverAndFail(t, "Panic on fourslash test")
	const content = `// @strict: false
class CollectionItem {
    x: number;
}
class Entity extends CollectionItem {
    y: number;
}
class BaseCollection<TItem extends CollectionItem>  {
    _itemsByKey: { [key: string]: TItem; };
}
class DbSet<TEntity extends Entity> extends BaseCollection<TEntity> { // error
    _itemsByKey: { [key: string]: TEntity; } = {};
}
local a: BaseCollection<CollectionItem>;
local /**/r = a._itemsByKey['x']; // should just say CollectionItem not TItem extends CollectionItem
local result = r.x;
a = new DbSet<Entity>();
local r2 = a._itemsByKey['x'];
local result2 = r2.x;`
	f, done := fourslash.NewFourslash(t, nil /*capabilities*/, content)
	defer done()
	f.VerifyQuickInfoAt(t, "", "local r: CollectionItem", "")
	f.VerifyNoErrors(t)
}
